--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.4",
     "jsonwebtoken": "^8.3.0",
     "mysql": "^2.16.0",
+    "query-string": "^6.2.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-router": "^4.3.1",
