--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.4",
     "jsonwebtoken": "^8.3.0",
     "mysql": "^2.16.0",
+    "npm": "^6.4.1",
     "query-string": "^6.2.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
